--- a/calendar.html
+++ b/calendar.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="sample.js" defer></script>
         <link rel="stylesheet" href="style.css" />
-        <title>Document</title>
+        <title>Trestle - Calendar</title>
     </head>
     <body>
         <button>Task</button> <button>Calendar</button>
@@ -16,9 +16,8 @@
         <div class="date_navigation">
             <select class="choose_view">
                 <option value="0">Year</option>
-                <option value="1">Month</option>
-                <option value="2" selected>Week</option>
-                <option value="3">Day</option>
+                <option value="1" selected>Month</option>
+                <option value="2">Week</option>
             </select>
 
             <button id="prev"><</button> <button id="today">Today</button>
