--- a/calendar.html
+++ b/calendar.html
@@ -4,11 +4,13 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="sample.js" defer></script>
+        <script src="utils.js" defer></script>
+        <script src="script.js" defer></script>
         <link rel="stylesheet" href="style.css" />
         <title>Trestle - Calendar</title>
     </head>
     <body>
+        <div id='date'></div>
         <button>Task</button> <button>Calendar</button>
         <br>
         <br>
