added something on weeks

--- a/calendar.html
+++ b/calendar.html
@@ -10,6 +10,7 @@
         <title>Trestle - Calendar</title>
     </head>
     <body>
+        <span class=dot></span>
         <div id='date'></div>
         <button>Task</button> <button>Calendar</button>
         <br>
@@ -18,8 +19,8 @@
         <div class="date_navigation">
             <select class="choose_view">
                 <option value="0">Year</option>
-                <option value="1" selected>Month</option>
-                <option value="2">Week</option>
+                <option value="1">Month</option>
+                <option value="2" selected>Week</option>
             </select>
 
             <button id="prev"><</button> <button id="today">Today</button>
