--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -10,6 +10,11 @@
         <title>Trestle - Calendar</title>
     </head>
     <body>
+        <div class='add_sched_modal'>
+        <div class='modal_content'>
+        </div>    
+        </div>
+
         <span class=dot></span>
         <div id='date'></div>
         <button>Task</button> <button>Calendar</button>
