--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -26,8 +26,8 @@
     <div class="date_navigation">
         <select class="choose_view">
             <option value="0">Year</option>
-            <option value="1">Month</option>
-            <option value="2" selected>Week</option>
+            <option value="1" selected>Month</option>
+            <option value="2">Week</option>
         </select>
 
         <button id="prev">
