Update on Redirection

--- a/landing.html
+++ b/landing.html
@@ -18,15 +18,15 @@
 <body>
     <!--Start of header-->
     <header id="navigation">
-        <a href="landingpage/landing.html" class="logo">Trestle</a>
+        <a href="#Home" class="logo">Trestle</a>
         <input type="checkbox" id="menu-bar">
         <label for="menu-bar" class="fas fa-bars"></label>
         <nav class="navbar">
-            <a href="#home">Home</a>
+            <a href="#Home">Home</a>
             <a href="integrated_calendar/views/calendar.html">Calendar</a>
             <a href="integrated_calendar/views/task_checklist.html">Task Checklist</a>
             <a href="integrated_calendar/views/announcements.html">Announcements</a>
-            <a href="#settings">Settings</a>
+            <a href="./settings.php">Settings</a>
             <a href="#help">Help</a>
             <a href="#" onclick="logout();">Logout</a>
         </nav>
@@ -156,12 +156,12 @@
             </div>
             <div class="box">
                 <h3>Quick Links</h3>
-                <a href="#">Home</a>
-                <a href="#">Calendar</a>
-                <a href="#">Task Checklist</a>
-                <a href="#">Announcements</a>
-                <a href="#">Settings</a>
-                <a href="#">Help</a>
+                <a href="#Home">Home</a>
+                <a href="./integrated_calendar/views/calendar.html">Calendar</a>
+                <a href="./integrated_calendar/views/task_checklist.html">Task Checklist</a>
+                <a href="./integrated_calendar/views/announcements.html">Announcements</a>
+                <a href="./settings.php">Settings</a>
+                <a href="#help">Help</a>
             </div>
             <div class="box">
                 <h3>Follow Us</h3>
